src/objects/RefundInvoicePayment__c.object
<CustomObject>
    <description>Refund Invoice Payment Object represents the relation table between Refund and Invoice Payment object. This object would have Master Details relation between Refund and RefundInvoicePayment and reference relation between InvoicePayment and RefundInvoicePayment</description>
    <fields>
        <fullName>EXT_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id For Refund Invoice Payment Object,   Represents a DAZN Refund Invoice Payment Object Id</description>
        <externalId>true</externalId>
        <label>Unique External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External_Id(Deprecated)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoicePayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Payment</label>
        <referenceTo>PaymentInvoice__c</referenceTo>
        <relationshipLabel>Refund Invoice Payments</relationshipLabel>
        <relationshipName>RefundInvoicePayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RefundAmount__c</fullName>
        <description>The amount of the refund that was applied to this InvoicePayment referenced by this object. DAZN Payments allows a single refund to be issued which can be applied to multitple payments (and therefore to invoice payments). For refunds created with the DAZN API, a refund can only be applied a single payment.</description>
        <inlineHelpText>The amount of the refund that was applied to this InvoicePayment referenced by this object. DAZN Payments allows a single refund to be issued which can be applied to multitple payments (and therefore to invoice payments). For refunds created with the Zuo</inlineHelpText>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <label>Refund</label>
        <referenceTo>Refund__c</referenceTo>
        <relationshipName>RefundInvoicePayments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>DAZN Refund Invoice Payment</label>
    <nameField>
        <displayFormat>RIP{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DAZN Refund Invoice Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>